// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders App in logged-in state 1`] = `
<div
  className="container"
>
  <BrowserRouter>
    <Switch>
      <Route
        component={<Home />}
        exact={true}
        path="/"
      />
      <Route
        component={<Profile />}
        path="/profile"
      />
      <Route
        component={<withRouter(Session) />}
        path="/breathe"
      />
      <Route
        component={<Settings />}
        path="/settings"
      />
      <Route
        component={<EditSettings />}
        path="/edit-settings"
      />
      <Route
        component={<AboutUs />}
        path="/about-us"
      />
    </Switch>
  </BrowserRouter>
</div>
`;

exports[`App component renders App when not logged in 1`] = `
<div
  className="container"
>
  <BrowserRouter>
    <Switch>
      <Route
        component={<React.Fragment />}
        exact={true}
        path="/"
      />
      <Route
        component={<React.Fragment />}
        path="/profile"
      />
      <Route
        component={<React.Fragment />}
        path="/breathe"
      />
      <Route
        component={<React.Fragment />}
        path="/settings"
      />
      <Route
        component={<React.Fragment />}
        path="/edit-settings"
      />
      <Route
        component={<React.Fragment />}
        path="/about-us"
      />
    </Switch>
  </BrowserRouter>
</div>
`;
